fix: no longer using letter-spacing, hopefully headings more readable now

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -346,10 +346,6 @@ h6,
     text-decoration: none;
     color: var(--foreground);
   }
-
-  &[id]:hover > a {
-    opacity: 1;
-  }
 }
 
 figure[data-rehype-pretty-code-figure] {
