--- a/quartz/styles/fonts.scss
+++ b/quartz/styles/fonts.scss
@@ -42,11 +42,6 @@ h6,
   margin-bottom: 1rem;
   font-weight: 500;
   line-height: 1.15;
-  letter-spacing: -0.022em;
-
-  .popover {
-    letter-spacing: initial;
-  }
 }
 
 $heading-sizes: (
